<resources>
    <!--app-->
    <string name="app_name">Scannr</string>
    <string name="register">Register</string>
    <string name="scannr_register">Create Account</string>

    <!--Landing-->
    <string name="landing_login">LOGIN</string>
    <string name="landing_register">REGISTER</string>
    <string name="landing_body">Collect receipts and redeem rewards while building healthy financial habits.</string>
    <string name="landing_header">Receipt Tracker</string>
    <string name="landing_title">scannr</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="login">LOGIN</string>
    <string name="login_slogan">Welcome Back</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="scannr">SCANNR</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login_user">RegisterUser</string>
    <string name="title_activity_register_user">RegisterUser</string>
    <string name="first_name_input">First Name</string>
    <string name="last_name_input">Last Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password_modal_title">Forgot Password?</string>
    <string name="forgot_password_description">Enter an email to send a password change email</string>
    <string name="settings">Settings</string>
    <string name="family_manager">Family Manager</string>
    <string name="purchase_history_manager">Purchase History Manager</string>
    <string name="receipt_uploader">Receipt Uploader</string>
    <string name="rewards">Rewards</string>
    <string name="notifications">Notifications</string>
    <string name="logout_modal_title">Logout?</string>
    <string name="logout">LOGOUT</string>
    <string name="middle_initial_input">MI.</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_birthday">Select your date of birth</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="todo">TODO</string>
    <string name="title_activity_family_manager">Family Manager</string>
    <string name="addChild">add child</string>
    <string name="scannr_family_manager">Scannr Family Manager</string>
    <string name="backButton">Back</string>
    <string name="NoChildAccounts">NO CHILD ACCOUNTS</string>
    <string name="title_activity_child_account_register">Register Child Account</string>
    <string name="scannr_register_child">Register Child</string>

    <string name="title">title</string>
    <string name="header">header</string>
    <string name="body">body</string>

    <!--Receipt Manager-->
    <string name="receipt_manager_title">Receipt Manager</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="BankRoutingNumber">Bank Routing Number</string>
    <string name="BankAccountNumber">Bank Account Number</string>
    <string name="SpendingLimit">Spending Limit</string>
    <string name="registerChild">REGISTER CHILD</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="register_child_user">REGISTER CHILD USER</string>
    <string name="create_reward">CREATE REWARD</string>
    <string name="list_of_all_family_members">LIST OF ALL FAMILY MEMBERS</string>
    <string name="family_viewer">Family Viewer</string>
    <string name="update_child_user">Update Child User</string>
    <string name="title_activity_update_child_form">Update Child Form</string>
    <string name="pending_rewards">Pending Rewards</string>
    <string name="redeemed_rewards">Redeemed Rewards</string>
    <string name="account_number">Account Number:</string>
    <string name="routing_number">Routing Number:</string>
    <string name="spending_limit">Spending Limit:</string>
    <string name="child">Child: </string>
    <string name="status">Status:</string>
    <string name="create_child">Create Child</string>
    <string name="reward_name">Reward Name</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="edit_name">Edit Name</string>
    <string name="first_name">First Name</string>
    <string name="middle_initial">Middle Initial</string>
    <string name="last_name">Last Name</string>
    <string name="first_name_label">First Name:</string>
    <string name="middle_initial_label">Middle Initial:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="edit_phone">Edit Phone</string>
    <string name="phone_number_label">Phone Number:</string>
    <string name="edit_password">Edit Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="edit_birthday">Edit Birthday</string>
    <string name="birthday_label">Birthday:</string>
    <string name="birthday">Birthday</string>
    <string name="email_label">Email:</string>
    <string name="edit_email">Edit Email</string>
    <string name="new_email_label">New Email:</string>
    <string name="new_email">New Email</string>
    <string name="current_email">Current Email</string>
    <string name="current_email_label">Current Email:</string>
    <string name="current_password_label">Current Password:</string>

</resources>