<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backButtonFamilyManagerCreateChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|top"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/backButton"
        android:src="@drawable/back_arrow_icon" />

    <TextView
        android:id="@+id/scannr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/scannr"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scannr_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/scannr_register_child"
        android:textSize="48sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/firstNameRegisterChild"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/first_name_input"
            android:inputType="text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/lastNameRegisterChild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/last_name_input"
            android:inputType="text"
            android:textSize="24sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/emailRegisterChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/passwordRegisterChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/bankRoutingNumberRegisterChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/BankRoutingNumber"
        android:inputType="number"
        android:maxLength="9"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/bankAccountNumberRegisterChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/BankAccountNumber"
        android:inputType="number"
        android:maxLength="12"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/spendingLimitRegisterChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/SpendingLimit"
        android:inputType="number"
        android:textSize="24sp" />

    <Button
        android:id="@+id/registerChildButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/primary"
        android:elevation="0dp"
        android:hapticFeedbackEnabled="false"
        android:stateListAnimator="@null"
        android:text="@string/register_child_user"
        android:textSize="16sp"
        android:textStyle="bold"
        android:theme="@style/Theme.Scannr.Button.BorderWhite"
        />
</LinearLayout>