<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:width="250dp"
        android:text="Edit Child User"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/bankRoutingNumberUpdateChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/BankRoutingNumber"
        android:inputType="number"
        android:maxLength="9"
        android:minHeight="48dp"/>
    <EditText
        android:id="@+id/bankAccountNumberUpdateChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/BankAccountNumber"
        android:inputType="number"
        android:maxLength="12"
        android:minHeight="48dp"/>
    <EditText
        android:id="@+id/spendingLimitUpdateChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/SpendingLimit"
        android:inputType="number"
        android:minHeight="48dp" />

</LinearLayout>